Update image format for them to display in Github Pages

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     </section>
     <section id="images-section">
         <div>
-            <img class="rock clickable-img" id="rock" src="/images/rock.png" alt="">
-            <img class="paper clickable-img" id="paper" src="/images/paper.png" alt="">
-            <img class="scissors clickable-img" id="scissors" src="/images/scissors.png" alt="">
+            <img class="rock clickable-img" id="rock" src="images/rock.png" alt="">
+            <img class="paper clickable-img" id="paper" src="images/paper.png" alt="">
+            <img class="scissors clickable-img" id="scissors" src="images/scissors.png" alt="">
         </div>
         <div>
-            <img class="rock computer-img" id="rock-computer" src="/images/rock.png" alt="">
-            <img class="paper computer-img" id="paper-computer" src="/images/paper.png" alt="">
-            <img class="scissors computer-img" id="scissors-computer" src="/images/scissors.png" alt="">
+            <img class="rock computer-img" id="rock-computer" src="images/rock.png" alt="">
+            <img class="paper computer-img" id="paper-computer" src="images/paper.png" alt="">
+            <img class="scissors computer-img" id="scissors-computer" src="images/scissors.png" alt="">
         </div>
     </section>
     <section id="button-section">
