--- a/index.html
+++ b/index.html
@@ -50,5 +50,5 @@
         <button class="button-stats">Reset Stats</button>
     </section>
 </body>
-<script src="challenge-rockpaperscissors/index.js"></script>
+<script src="./index.js"></script>
 </html>
