--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </section>
     <section id="stats">
         <h2>Stats</h2>
-        <h3>Winned by you</h3>
+        <h3>Won by you</h3>
         <h3>Tied</h3>
-        <h3>Winned by computer</h3>
+        <h3>Won by computer</h3>
         <p class="stat" id="human-wins">0</p>
         <p class="stat" id="ties">0</p>
         <p class="stat" id="computer-wins">0</p>
@@ -49,6 +49,8 @@
     <section id="button-section">
         <button class="button-stats">Reset Stats</button>
     </section>
+    <div id="app">
+    </div>
 </body>
 <script src="./index.js"></script>
 </html>
